# opengl-engine

./: CMakeLists.txt
include/: VAO.h  shaderClass.h
include/glad/: gl.h
lib/glad/: gl.c
shaders/: default.frag  default.vert
src/: EBO.cpp  EBO.h  VAO.cpp  VBO.cpp  VBO.h  camera.cpp  camera.h  deltaTime.cpp  deltaTime.h  main.cpp  shaderClass.cpp  shaderClass.h
